# veml6030

./: Cargo.toml  LICENSE  README.md  tasks.py
.cargo/: config.toml
examples/: nrf52840_async.rs  nrf52840_int.rs
src/: builder.rs  error.rs  fmt.rs  lib.rs  regs.rs  sensor.rs
veml6030_app/: Cargo.toml  build.rs  memory.x
veml6030_app/.cargo/: config.toml
veml6030_app/src/: main.rs
veml6030_driver/: Cargo.toml
veml6030_driver/src/: builder.rs  error.rs  lib.rs  regs.rs  sensor.rs
