[package]
name = "veml6030_app"
version = "0.1.0"
edition = "2021"

[dependencies]

veml6030_driver = { path = "../veml6030_driver", features = ["async", "defmt"] }

embassy-nrf = { version = "0.10.0", features = [
    "defmt",
    "nrf52840",
    "time-driver-rtc1",
    "gpiote",
    "unstable-pac",
    "time",
] }
embassy-executor = { version = "0.10.0", features = [
    "platform-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-time = { version = "0.5.1", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "generic-queue-8",
] }
embassy-sync = { version = "0.8.0", features = ["defmt"] }
embassy-futures = "0.1.2"

defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7"
static_cell = "2"
