[package]
name = "veml6030_driver"
version = "0.1.0"
edition = "2021"

[features]
default = ["async", "defmt"]
async = ["dep:embedded-hal-async"]
defmt = ["dep:defmt"]

[dependencies]
thiserror = { version = "2.0", default-features = false }
embedded-hal = "1.0"
embedded-hal-async = { version = "1.0", optional = true }
bitfield = "0.13.0"
log = "0.4"
defmt = { version = "1.0.1", optional = true }
embassy-futures = "0.1.2"

[dev-dependencies]
embedded-hal-mock = { version = "0.11", features = [
    "eh1",
    "embedded-hal-async",
] }
futures = "0.3"
static_cell = { version = "2" }
